namespace CrisisConnect.Domain.Enums;

public enum NiveauUrgence
{
    Faible,
    Moyen,
    Eleve,
    Critique
}
