namespace CrisisConnect.Domain.Enums;

public enum OperateurLogique
{
    Simple,
    Et,
    Ou
}
