namespace CrisisConnect.Domain.Enums;

/// <summary>Statut d'une IntentionDon sur une DemandeQuota (§5.1.3).</summary>
public enum StatutIntention
{
    EnAttente,
    Acceptee,
    Refusee,
    Confirmee
}
