namespace CrisisConnect.Domain.Enums;

/// <summary>Statut d'une ligne de catalogue dans DemandeSurCatalogue (§5.1.3).</summary>
public enum StatutLigne
{
    Demandee,
    PartiellementFournie,
    Fournie
}
