namespace CrisisConnect.Domain.Enums;

public enum StatutProposition
{
    Ouverte,
    Affectee,
    Cloturee
}
