namespace CrisisConnect.Domain.Enums;

/// <summary>Statut de validation d'une PropositionAvecValidation par un tiers de confiance (§5.1.3).</summary>
public enum StatutValidation
{
    EnAttente,
    Validee,
    Refusee
}
