namespace CrisisConnect.Domain.Enums;

/// <summary>§5.1 ex.7 : photos, vidéos, enregistrements (smartphone).</summary>
public enum TypeMedia
{
    Photo,
    Video,
    Audio,
    Document
}
